--- a/contents/css/main.css
+++ b/contents/css/main.css
@@ -4,15 +4,15 @@ h1, h2, h3, h4, h5, h6, p, body, a, img, ul, ol, blockquote, pre {
 }
 
 body {
-  font-family: 'Lora', serif;
-  font-size: 21px;
+  font-family: "Times New Roman", serif;
+  font-size: 18px;
   line-height: 1.52;
   background-color: #f8f8f8;
   text-rendering: optimizeLegibility;
 }
 
 .content-wrap {
-  width: 34em;
+  width: 54em;
   margin: 0 auto;
 }
 
@@ -146,8 +146,8 @@ footer .nav a {
 
 footer .about {
   border-top: 1px dashed #d2d2d2;
-  padding: 2.2em 3em;
-  font-size: 0.7em;
+  padding: 2.2em 0;
+  font-size: 0.8em;
   -webkit-column-count: 3;
   -moz-column-count: 3;
   -ms-column-count: 3;
@@ -289,6 +289,20 @@ footer .copy, footer .copy a {
   margin: 0;
 }
 
+/* pages */
+.page {
+  margin: 3em 0 4em;
+}
+
+.page section.info {
+  border: 1px solid green;
+  float: left;
+  width: 48%;
+}
+.page section.info + section.info {
+  margin-left: 4%;
+}
+
 /* code styling */
 
 code {
@@ -378,7 +392,7 @@ code.lang-markdown .bullet {
 /* media queries */
 
 @media (min-width: 1600px) {
-  body { font-size: 26px; }
+  body { font-size: 21px; }
 }
 
 @media (max-width: 900px) {
@@ -430,5 +444,12 @@ code.lang-markdown .bullet {
   }
   footer .about p {
     margin-bottom: 1em;
+  }
+  .page section.info {
+    float: none;
+    width: auto;
+  }
+  .page section.info + section.info {
+    margin-left: 0;
   }
 }
