--- a/templates/layout.jade
+++ b/templates/layout.jade
@@ -20,6 +20,7 @@ html(lang='en')
           div.logo
             h1
               a(href=locals.url) Expériences Politiques
+            p.description du 7 au 12 mars 2016 à Lyon
 
     nav.navigation
       a(class='menuitem', href='/programme/') Programme
