--- a/templates/page.jade
+++ b/templates/page.jade
@@ -8,5 +8,5 @@ block prepend title
   | #{ page.title + ' - '}
 
 block content
-  article.article
+  article.page
     section.content!= typogr(page.html).typogrify()
