--- a/templates/layout.jade
+++ b/templates/layout.jade
@@ -43,3 +43,5 @@ html(lang='en')
               &nbsp;&mdash; powered by&nbsp;
               a(href='https://github.com/jnordberg/wintersmith') Wintersmith
               //- please leave the "powered by" if you use the design
+
+    include tracker.html
