Fixed issues in the planning, added abstract in the home page.

--- a/templates/index.jade
+++ b/templates/index.jade
@@ -3,6 +3,8 @@ extends layout
 
 block content
   include author
+  p.introduction Si les élites ont confisqué la parole politique, reprenons-la ! Les Expériences Politiques sont une semaine de conférences, débats, projections et ateliers pour explorer les alternatives politiques d'aujourd'hui. Contrôle des élus, revenu de base, démarches participatives, assemblées citoyennes, tirage au sort… Les pistes sont nombreuses, à nous de les expérimenter !&nbsp;
+    a(href='/a-propos/') En savoir plus.
   each article in articles
     article.article.intro
       header
