--- a/templates/layout.jade
+++ b/templates/layout.jade
@@ -39,8 +39,8 @@ html(lang='en')
             !=contents['about.md'].html
           section.copy
             p Expériences Politiques 2016 &mdash;&nbsp;
-              a(href='') sources
-              &nbsp;&mdash; powered by&nbsp;
+              a(href='https://github.com/adngdb/experiences-politiques') sources
+              span &nbsp;&mdash; powered by&nbsp;
               a(href='https://github.com/jnordberg/wintersmith') Wintersmith
               //- please leave the "powered by" if you use the design
 
