Next workshop and renamed A propos menu. Added an article to announce the next workshop on Feb 8. Renamed the a-propos menu item to say A Propos instead of Experiences Politiques, which was confusing.

--- a/templates/layout.jade
+++ b/templates/layout.jade
@@ -23,7 +23,7 @@ html(lang='en')
 
     nav.navigation
       a(class='menuitem', href='/programme/') Programme
-      a(class='menuitem', href='/a-propos/') Expériences Politiques
+      a(class='menuitem', href='/a-propos/') À Propos
       a(class='menuitem', href='/infos/') Infos Pratiques
       a(class='menuitem', href='/medias/') Médias
       a(class='menuitem', href='/benevoles/') Devenir Bénévole
