--- a/templates/layout.jade
+++ b/templates/layout.jade
@@ -23,17 +23,28 @@ html(lang='en')
             p.description du 6 au 11 mars 2017 à Lyon
 
     nav.navigation
-      ul
-        li
-          a(class='menuitem', href='/programme/') Programme
-        li
-          a(class='menuitem', href='/a-propos/') À Propos
-        li
-          a(class='menuitem', href='/infos/') Infos Pratiques
-        li
-          a(class='menuitem', href='/medias/') Médias
-        li
-          a(class='menuitem', href='/benevoles/') Devenir Bénévole
+      div.content-wrap
+        ul.social
+          li
+            a(href='https://www.facebook.com/Experiencespo')
+              img(src='/img/icons/facebook.png', alt='Facebook')
+          li
+            a(href='https://twitter.com/expepol')
+              img(src='/img/icons/twitter.png', alt='Twitter')
+          li
+            a(href='https://www.youtube.com/channel/UCEUIMJkUmY8gANXCTZlmpWQ')
+              img(src='/img/icons/youtube.png', alt='YouTube')
+        ul.menuitem
+          li
+            a(href='/programme/') Programme
+          li
+            a(href='/a-propos/') À Propos
+          li
+            a(href='/infos/') Infos Pratiques
+          li
+            a(href='/medias/') Médias
+          li
+            a(href='/benevoles/') Devenir Bénévole
 
     div#content
       div.content-wrap
