Added a post about the formation by Tabadol.

--- a/templates/layout.jade
+++ b/templates/layout.jade
@@ -26,13 +26,13 @@ html(lang='en')
       div.content-wrap
         ul.social
           li
-            a(href='https://www.facebook.com/Experiencespo')
+            a(href='https://www.facebook.com/Experiencespo', title='Les Expériences Politiques sur Facebook')
               img(src='/img/icons/facebook.png', alt='Facebook')
           li
-            a(href='https://twitter.com/expepol')
+            a(href='https://twitter.com/expepol', title='Les Expériences Politiques sur Twitter')
               img(src='/img/icons/twitter.png', alt='Twitter')
           li
-            a(href='https://www.youtube.com/channel/UCEUIMJkUmY8gANXCTZlmpWQ')
+            a(href='https://www.youtube.com/channel/UCEUIMJkUmY8gANXCTZlmpWQ', title='Les Expériences Politiques sur YouTube')
               img(src='/img/icons/youtube.png', alt='YouTube')
         ul.menuitem
           li
