Updated dates to year 2019.

--- a/templates/layout.jade
+++ b/templates/layout.jade
@@ -21,8 +21,8 @@ html(lang='en')
             h1
               a(href=locals.url)
                 img(src='/img/logo.png', alt='Expériences Politiques')
-            h2 Le Festival des Alternatives Politiques !
-            p.description du 5 au 10 mars 2018 à Lyon
+            h2 De la colère à un nouvel imaginaire
+            p.description du 1er au 13 avril 2019 à Lyon
 
     nav.navigation
       div.content-wrap
