Update dates for 2019.

--- a/templates/layout.jade
+++ b/templates/layout.jade
@@ -22,7 +22,7 @@ html(lang='en')
               a(href=locals.url)
                 img(src='/img/logo.png', alt='Expériences Politiques')
             h2 De la colère à un nouvel imaginaire
-            p.description du 1er au 13 avril 2019 à Lyon
+            p.description du 2 au 13 avril 2019 à Lyon
 
     nav.navigation
       div.content-wrap
