Add dates for 2020 edition, update programme to a link.

--- a/templates/layout.jade
+++ b/templates/layout.jade
@@ -21,8 +21,8 @@ html(lang='en')
             h1
               a(href=locals.url)
                 img(src='/img/logo.png', alt='Expériences Politiques')
-            h2 De la colère à un nouvel imaginaire
-            p.description du 2 au 13 avril 2019 à Lyon
+            h2 Le Festival des Alternatives Politiques
+            p.description du 17 au 22 février 2020 à Lyon
 
     nav.navigation
       div.content-wrap
